kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/alpha/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alpha
  labels:
    tenant: alpha
    pod-security.kubernetes.io/enforce: baseline
