kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/alpha/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpha-demo
  namespace: alpha
  labels:
    app: alpha-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alpha-demo
  template:
    metadata:
      labels:
        app: alpha-demo
    spec:
      serviceAccountName: alpha-app-sa
      containers:
        - name: web
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
