kubernetes-reference-architectures/multi-cluster-strategy/k8s/shared-cluster/alpha/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpha-demo
  namespace: alpha
spec:
  selector:
    app: alpha-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
